Follow setuptools best practices for pyproject.toml
- Import all hooks in build backend, as described in the setuptools docs
- Update license, classifiers, requires-python, readme, project.url fields

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,17 +6,23 @@ backend-path = ["."]
 [project]
 name = "workers-control"
 version = "0.0.0"
+description = "A flask app for labour time accounting."
+license = "AGPL-3.0-or-later"
+requires-python = ">=3.12"
 classifiers = [
-    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
+    "Framework :: Flask",
+    "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
+readme = "README.rst"
 
 [project.optional-dependencies]
 profiling = ["flask_profiler"]
 
-[tool.setuptools]
-include-package-data = true
+[project.urls]
+Homepage = "https://github.com/ida-arbeitszeit/workers-control"
+Documentation = "https://workers-control.readthedocs.io/"
 
 [tool.setuptools.packages.find]
 include = [
