Introduce new update and release process
- Add documentation on releases and updates
- Add twine as dev dependency
- Add build dependencies to pyproject.toml

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,6 +10,7 @@ psycopg2
 pytest
 sphinx
 sphinx-rtd-theme
+twine
 types-setuptools
 
 git+https://github.com/seppeljordan/flask-profiler.git#egg=flask-profiler
