--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,20 @@ classifiers = [
 ]
 readme = "README.rst"
 
+dependencies = [
+    # Pin to exact versions. Update manually.
+    "alembic==1.16.4",
+    "email-validator==2.2.0",
+    "flask==3.1.2",
+    "flask-babel==4.0.0",
+    "flask-mail==0.10.0",
+    "flask-talisman==1.1.0",
+    "flask-login==0.6.3",
+    "flask-restx==1.3.2",
+    "flask-wtf==1.2.2",
+    "matplotlib==3.10.5"
+]
+
 [project.optional-dependencies]
 profiling = ["flask_profiler"]
 
