--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ recursive-include arbeitszeit_flask/templates *.html
 recursive-include arbeitszeit_flask/static *.js *.css favicon.ico
 recursive-include arbeitszeit_flask/translations *.po *.mo *.pot
 recursive-include arbeitszeit_db/migrations *.mako *.py
+recursive-include build_support *.py *.cfg
