Rename variables and options to "workers_control"
Devs must rename the following env vars:
- ARBEITSZEITAPP_SERVER_NAME -> WOCO_SERVER_NAME
- ARBEITSZEITAPP_TEST_DB -> WOCO_TEST_DB
- ARBEITSZEITAPP_DEV_DB -> WOCO_DEV_DB

Downstream production users need to rename env vars, if applicable:
- ARBEITSZEITAPP_CONFIGURATION_PATH -> WOCO_CONFIGURATION_PATH
- ARBEITSZEIT_PASSWORD_HASHER -> WOCO_PASSWORD_HASHER

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -86,7 +86,7 @@ jobs:
         pytest
         deactivate
       env:
-        ARBEITSZEITAPP_TEST_DB: postgresql://postgres:postgres@localhost:5432/postgres
+        WOCO_TEST_DB: postgresql://postgres:postgres@localhost:5432/postgres
     - name: Try build developer documentation
       run: |
         . ./venv/bin/activate
