--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ my_database_key.py
 custom_settings.py
 arbeitszeitapp_test.db
 arbeitszeitapp_dev.db
+workers_control_test.db
+workers_control_dev.db
 *.db-journal
 
 # Byte-compiled / optimized / DLL files
