--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ classifiers = [
 readme = "README.rst"
 
 dependencies = [
-    # Pin to exact versions. Update manually.
-    "alembic==1.16.4",
+    # Pin to exact versions, if possible. Update manually.
+    "alembic>=1.16.4, <=1.17.2",  # different versions in stable/unstable nixpkgs 
     "email-validator==2.2.0",
     "flask==3.1.2",
     "flask-babel==4.0.0",
